# M3OEP-hcollin3-erohan-jjklug-thuynh4

./: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  King.h  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.h  README.md  Rook.cpp  Rook.h  chess.py  main.cpp  stockfish.py
pieces/: Bishop.cpp  Bishop.h  Empty.cpp  Empty.h  King.cpp  King.h  Knight.cpp  Knight.h  OffBoard.cpp  OffBoard.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  pieceClasses.h
